# vm2

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  KNOWN_DIVERGENCIES.md
security-review/: 01-static-memory-pointer-flag-divergence.md  02-program-to-bytes-vs-decommit-code-mismatch.md  03-heap-index-panic-on-undecodable-page-reevaluated.md  03-heap-index-panic-on-undecodable-page.md  04-failed-far-call-r1-poison-host-panic.md  05-clear-transient-storage-snapshot-invalidation.md  06-snapshot-index-drift-embedder-api.md  07-tracer-read-contract-code-empty-codepage-panic.md  08-dst1-register-not-pre-zeroed.md  decommit-rollback-leak.md  evm-stipend-divergence.md  fuzz-crash-id000000-evm-stipend.md  fuzz-crash-id000001-evm-stipend.md  fuzz-crash-id000002-evm-stipend.md  fuzz-crash-id000003-evm-stipend.md  gas-counting.md  stipend-fix.patch
tests/differential-regressions/: Cargo.toml
tests/differential-regressions/src/: lib.rs
tests/differential-regressions/src/tests/: evm_stipend.rs  heap_read_increment_pointer_flag.rs  mod.rs
zksync_vm2/: all.html  enum.ExecutionEnd.html  enum.Predicate.html  index.html  struct.FatPointer.html  struct.Instruction.html  struct.ModeRequirements.html  struct.Program.html  struct.Settings.html  struct.Snapshot.html  struct.StorageChange.html  struct.StorageSlot.html  struct.VirtualMachine.html  struct.WorldDiff.html  trait.StorageInterface.html  trait.World.html
zksync_vm2_interface/: all.html  enum.CallingMode.html  enum.CycleStats.html  enum.Opcode.html  enum.ReturnType.html  enum.ShouldStop.html  index.html  struct.Event.html  (+8 more)
(+103 files in other folders)
